Fix content alignment for button_spring

--- a/blocks/button/button.css.styl
+++ b/blocks/button/button.css.styl
@@ -79,6 +79,7 @@
   
   &_spring
     width 100%
+    justify-content center
 
   &_size
 
